--- a/zoia_lib/UI/resources/dark.css
+++ b/zoia_lib/UI/resources/dark.css
@@ -33,7 +33,9 @@ QPushButton#btn_load_bank {
 QPushButton#delete_folder_sd_btn,
 QPushButton#import_all_btn,
 QPushButton#import_all_ver_btn,
-QPushButton#btn_dwn_all {
+QPushButton#btn_dwn_all,
+QPushButton#btn_prev_page,
+QPushButton#btn_next_page {
     border-radius: 5px;
     padding: 2px 2px 2px 2px;
     border: 1px solid black;
