Better html parsing of module index. Edit toolbar name for Firwmware files

--- a/zoia_lib/UI/ZOIALibrarian.ui
+++ b/zoia_lib/UI/ZOIALibrarian.ui
@@ -3217,7 +3217,7 @@
   </action>
   <action name="actionFirmware_Files">
    <property name="text">
-    <string>Firmware Files</string>
+    <string>Firmware</string>
    </property>
   </action>
  </widget>
