--- a/zoia_lib/UI/ZOIALibrarian.ui
+++ b/zoia_lib/UI/ZOIALibrarian.ui
@@ -310,6 +310,9 @@
                          <property name="gridStyle">
                           <enum>Qt::SolidLine</enum>
                          </property>
+                         <property name="sortingEnabled">
+                          <bool>true</bool>
+                         </property>
                          <property name="rowCount">
                           <number>1</number>
                          </property>
@@ -552,6 +555,9 @@
                    </property>
                    <property name="horizontalScrollMode">
                     <enum>QAbstractItemView::ScrollPerPixel</enum>
+                   </property>
+                   <property name="sortingEnabled">
+                    <bool>true</bool>
                    </property>
                    <property name="rowCount">
                     <number>1</number>
@@ -2682,6 +2688,9 @@
                 </property>
                 <property name="horizontalScrollMode">
                  <enum>QAbstractItemView::ScrollPerPixel</enum>
+                </property>
+                <property name="sortingEnabled">
+                 <bool>true</bool>
                 </property>
                 <property name="rowCount">
                  <number>1</number>
