Update stylesheets for both light and dark themes

--- a/zoia_lib/UI/ZOIALibrarian.ui
+++ b/zoia_lib/UI/ZOIALibrarian.ui
@@ -2092,10 +2092,10 @@
                    <bool>true</bool>
                   </property>
                   <property name="toolTip">
-                   <string>Click here to clear the bank</string>
+                   <string>Click here to clear the bank.</string>
                   </property>
                   <property name="statusTip">
-                   <string>Click here to clear the bank</string>
+                   <string>Click here to clear the bank.</string>
                   </property>
                   <property name="accessibleName">
                    <string>Clear Bank button</string>
